<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_common"
        android:gravity="center_horizontal"
        android:layoutAnimation="@anim/layout_from_bottom"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_45"
        tools:layoutAnimation="@null">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_register_logo"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:layout_marginVertical="@dimen/dp_10"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/ll_register_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_25"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_register_phone"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_10"
                android:hint="@string/login_account_hint"
                android:inputType="textVisiblePassword"
                android:singleLine="true" />

            <View
                style="@style/HorizontalLineStyle"
                android:layout_marginHorizontal="@dimen/dp_40" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_register_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_15"
                android:hint="@string/login_password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true" />

            <View
                style="@style/HorizontalLineStyle"
                android:layout_marginHorizontal="@dimen/dp_40" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_register_repassword"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_15"
                android:hint="@string/register_confirm_password_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true" />

            <View
                style="@style/HorizontalLineStyle"
                android:layout_marginHorizontal="@dimen/dp_40" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_register_commit"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_40"
                android:layout_marginTop="@dimen/dp_45"
                android:text="@string/register_action" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="0px"
            android:layout_weight="1" />

    </LinearLayout>
